# spirit-nfc

./: .gitignore  CMakeLists.txt
res/: spirit-nfc.rsf
src/: CMakeLists.txt  spirit-nfc.cpp
src/base/: menu.cpp  menu.h  nfc_card.cpp  nfc_card.h
